[Paragraph] Fixed problem with text wrapping and double scroll bar.

--- a/addons/Paragraph/src/style.css
+++ b/addons/Paragraph/src/style.css
@@ -1,9 +1,10 @@
 div.paragraph-wrapper {
 	width: 100%;
 	height: 100%;
-	overflow: auto;
 	border: solid 1px #9E9E9E;
 	border-radius: 2px;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 div.paragraph-wrapper textarea {
